Playing around before Unit 4 Assignment

--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
 	<title>Memory</title>
 	 <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet"> 
 	 <link rel="stylesheet" type="text/css" href="styles/style.css">
+	 <link rel="shortcut icon" href="images/tab-icon.png" type="image/ico">
 </head>
 <body>
 	<h1>Memory Game</h1>
 
-	<a href="#">Instructions</a>
-	<a href="#">Game</a>
-	<a href="#">Monsagri</a>
+	<a href="#instructions">Instructions</a>
+	<a href="#game">Game</a>
+	<a href="#game">Monsagri</a>
 
-	<h3>Instructions</h3>
+	<h3 id="instructions">Instructions</h3>
 
 	<p>Concentration, also known as Match Match, Match Up, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. <br>
 	The object of the game is to turn over pairs of matching cards. Concentration can be played with any number of players or as solitaire. It is a particularly good game for young children, though adults may find it challenging and stimulating as well.</p>
 
-	<h3>Game</h3>
+	<h3 id="game">Game</h3>
 
-	<h3>Monsagri</h3>
+	<h3 id="monsagri">Monsagri</h3>
 
 	<p>Watch this space for other fun games or interesting websites.<br>
 		For now follow my <a href="https://github.com/monsagri">Github</a> and <a href="https://twitter.com/monsagri">Twitter</a> to stay up to date!</p>
-
+		
+	<footer></footer>
 </body>
 </html>
