--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Memory</title>
-	 <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
 	 <link rel="stylesheet" type="text/css" href="styles/style.css">
 	 <link rel="shortcut icon" href="images/tab-icon.png" type="image/ico">
 </head>
@@ -20,6 +20,13 @@
 	The object of the game is to turn over pairs of matching cards. Concentration can be played with any number of players or as solitaire. It is a particularly good game for young children, though adults may find it challenging and stimulating as well.</p>
 
 	<h3 id="game">Game</h3>
+
+	<div>
+		<img src="images/back.png" alt="Queen of Diamonds">
+		<img src="images/back.png" alt="Queen of Hearts">
+		<img src="images/back.png" alt="King of Diamonds">
+		<img src="images/back.png" alt="King of Hearts">
+	</div>
 
 	<h3 id="monsagri">Monsagri</h3>
 
