Completed Unit 5 WDI

--- a/index.html
+++ b/index.html
@@ -8,31 +8,43 @@
 	 <link rel="shortcut icon" href="images/tab-icon.png" type="image/ico">
 </head>
 <body>
-	<h1>Memory Game</h1>
+	<header>
+		<h1>Memory Game</h1>
+	</header>
+	<nav>
+			<a href="#instructions">Instructions</a>
+			<a href="#game">Game</a>
+			<a href="#game">Monsagri</a>
+	</nav>
+	<main>
+		<h3 id="instructions">Instructions</h3>
 
-	<a href="#instructions">Instructions</a>
-	<a href="#game">Game</a>
-	<a href="#game">Monsagri</a>
+		<p>Concentration, also known as Match Match, Match Up, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. <br>
+		The object of the game is to turn over pairs of matching cards. Concentration can be played with any number of players or as solitaire. It is a particularly good game for young children, though adults may find it challenging and stimulating as well.</p>
 
-	<h3 id="instructions">Instructions</h3>
+		<h3 id="game">Game</h3>
 
-	<p>Concentration, also known as Match Match, Match Up, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. <br>
-	The object of the game is to turn over pairs of matching cards. Concentration can be played with any number of players or as solitaire. It is a particularly good game for young children, though adults may find it challenging and stimulating as well.</p>
+		<div>
+			<img src="images/back.png" alt="Queen of Diamonds">
+			<img src="images/back.png" alt="Queen of Hearts">
+			<img src="images/back.png" alt="King of Diamonds">
+			<img src="images/back.png" alt="King of Hearts">
+		</div>
+	
 
-	<h3 id="game">Game</h3>
+		<h3 id="monsagri">Monsagri</h3>
 
-	<div>
-		<img src="images/back.png" alt="Queen of Diamonds">
-		<img src="images/back.png" alt="Queen of Hearts">
-		<img src="images/back.png" alt="King of Diamonds">
-		<img src="images/back.png" alt="King of Hearts">
-	</div>
+		<p>I'm a student at GA London's Web Development Immersive course.<br>
+		I am interested in reviving old games and connecting with interesting minds.<br>
+		For now follow me and get in touch to stay up to date!</p>
 
-	<h3 id="monsagri">Monsagri</h3>
-
-	<p>Watch this space for other fun games or interesting websites.<br>
-		For now follow my <a href="https://github.com/monsagri">Github</a> and <a href="https://twitter.com/monsagri">Twitter</a> to stay up to date!</p>
+	</main>
 		
-	<footer></footer>
+	<footer>
+		<ul>
+			<li><a href="https://github.com/monsagri">Github</a></li>
+			<li><a href="https://twitter.com/monsagri">Twitter</a></li>
+		</ul>
+	</footer>
 </body>
 </html>
