Added Socialmedia links independently

--- a/index.html
+++ b/index.html
@@ -42,8 +42,31 @@
 		
 	<footer>
 		<ul>
-			<li><a href="https://github.com/monsagri">Github</a></li>
-			<li><a href="https://twitter.com/monsagri">Twitter</a></li>
+			<li>
+				<a href="https://github.com/monsagri">
+					<img src="images/thumbnail-git.png" alt="Github Logo Black and White" title="Github" class="socialmedia">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="images/thumbnail-codepen.png" alt="Codepen Logo Black and White" title="Codepen" class="socialmedia">
+				</a>
+			</li>
+			<li>
+				<a href="mailto:monsagri@gmail.com">
+					<img src="images/thumbnail-gmail.jpg" alt="Gmail Logo Black and White" title="Gmail" class="socialmedia">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="images/thumbnail-slack.jpg" alt="Slack Logo Black and White" title="Slack" class="socialmedia">
+				</a>
+			</li>
+			<li>
+				<a href="https://twitter.com/monsagri">
+					<img src="images/thumbnail-twitter.png" alt="Twitter Logo Black and White" title="Twitter" class="socialmedia">
+				</a>
+			</li>
 		</ul>
 	</footer>
 </body>
