Preparing for Heroku Hosting per gist

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Memory</title>
 	 <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
+	 <link rel="stylesheet" type="text/css" href="styles/reset.css">
 	 <link rel="stylesheet" type="text/css" href="styles/style.css">
 	 <link rel="shortcut icon" href="images/tab-icon.png" type="image/ico">
 </head>
@@ -69,5 +70,7 @@
 			</li>
 		</ul>
 	</footer>
+	<script type="text/javascript" src="scripts/scripts.js"></script>
 </body>
+
 </html>
