Added Navbar according to WDI Unit 6

--- a/home.html
+++ b/home.html
@@ -12,10 +12,10 @@
 	<header>
 		<h1>Memory Game</h1>
 	</header>
-	<nav>
-			<a href="#instructions">Instructions</a>
-			<a href="#game">Game</a>
-			<a href="#game">Monsagri</a>
+	<nav class="clearfix">
+			<a href="#instructions" class="navbar">Instructions</a>
+			<a href="#game" class="navbar">Game</a>
+			<a href="#monsagri" class="navbar">Monsagri</a>
 	</nav>
 	<main>
 		<h3 id="instructions">Instructions</h3>
