--- a/home.html
+++ b/home.html
@@ -26,10 +26,10 @@
 		<h3 id="game">Game</h3>
 
 		<div>
-			<img src="images/back.png" alt="Queen of Diamonds">
-			<img src="images/back.png" alt="Queen of Hearts">
-			<img src="images/back.png" alt="King of Diamonds">
-			<img src="images/back.png" alt="King of Hearts">
+			<img src="images/back.png" alt="Queen of Diamonds" class="card">
+			<img src="images/back.png" alt="Queen of Hearts" class="card">
+			<img src="images/back.png" alt="King of Diamonds" class="card">
+			<img src="images/back.png" alt="King of Hearts" class="card">
 		</div>
 	
 
