--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Memory</title>
+	<title>Monsagri's Memory</title>
 	 <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
 	 <link rel="stylesheet" type="text/css" href="styles/reset.css">
 	 <link rel="stylesheet" type="text/css" href="styles/style.css">
@@ -70,7 +70,7 @@
 			</li>
 		</ul>
 	</footer>
-	<script type="text/javascript" src="scripts/scripts.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
