--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
 	<nav class="clearfix">
 			<a href="#instructions" class="navbar">Instructions</a>
 			<a href="#game" class="navbar">Game</a>
+			<a href="#highscores" class="navbar">Highscores</a>
 			<a href="#monsagri" class="navbar">Monsagri</a>
 	</nav>
 	<main>
@@ -31,7 +32,35 @@
 			<img src="images/back.png" alt="King of Diamonds" class="card">
 			<img src="images/back.png" alt="King of Hearts" class="card">
 		</div>
-	
+		
+		<h3 id="highscores">Highscores</h3>
+
+		<table class="scores">
+			<tr>
+				<th>Name</th>
+				<th>Score</th>
+			</tr>
+			<tr>
+				<td id="highscore1">Mons</td>
+				<td>50</td>
+			</tr>
+			<tr>
+				<td id="highscore2">Agri</td>
+				<td>40</td>
+			</tr>
+			<tr>
+				<td id="highscore3">AAA</td>
+				<td>30</td>
+			</tr>
+			<tr>
+				<td id="highscore4">BBB</td>
+				<td>20</td>
+			</tr>
+			<tr>
+				<td id="highscore5">CCC</td>
+				<td>10</td>
+			</tr>
+		</table>
 
 		<h3 id="monsagri">Monsagri</h3>
 
