--- a/home.html
+++ b/home.html
@@ -35,30 +35,30 @@
 		
 		<h3 id="highscores">Highscores</h3>
 
-		<table class="scores">
+		<table id="highscoretable" class="scores">
 			<tr>
 				<th>Name</th>
 				<th>Score</th>
 			</tr>
 			<tr>
-				<td id="highscore1">Mons</td>
-				<td>50</td>
+				<td id="player0">Mons</td>
+				<td id="score0">50</td>
 			</tr>
 			<tr>
-				<td id="highscore2">Agri</td>
-				<td>40</td>
+				<td id="player1">Agri</td>
+				<td id="score1">40</td>
 			</tr>
 			<tr>
-				<td id="highscore3">AAA</td>
-				<td>30</td>
+				<td id="player2">AAA</td>
+				<td id="score2">30</td>
 			</tr>
 			<tr>
-				<td id="highscore4">BBB</td>
-				<td>20</td>
+				<td id="player3">BBB</td>
+				<td id="score3">20</td>
 			</tr>
 			<tr>
-				<td id="highscore5">CCC</td>
-				<td>10</td>
+				<td id="player4">CCC</td>
+				<td id="score4">10</td>
 			</tr>
 		</table>
 
