Completed Unit 11 Core - Minimum working Product

--- a/home.html
+++ b/home.html
@@ -26,11 +26,8 @@
 
 		<h3 id="game">Game</h3>
 
-		<div>
-			<img src="images/back.png" alt="Queen of Diamonds" class="card">
-			<img src="images/back.png" alt="Queen of Hearts" class="card">
-			<img src="images/back.png" alt="King of Diamonds" class="card">
-			<img src="images/back.png" alt="King of Hearts" class="card">
+		<div id="game-board" class="board clearfix">
+			
 		</div>
 		
 		<h3 id="highscores">Highscores</h3>
