Added reset functionality and Scorebox without functionality

--- a/home.html
+++ b/home.html
@@ -26,6 +26,14 @@
 
 		<h3 id="game">Game</h3>
 
+		<div id="scorebox"> 
+			<p>Your Score</p>
+			<p id="scoredisplay">0</p>
+		</div>
+		<div id="reset"	class="button">
+			<button id="resetbutton">Reset</button>
+		</div>
+
 		<div id="game-board" class="board clearfix">
 			
 		</div>
