--- a/home.html
+++ b/home.html
@@ -19,24 +19,32 @@
 			<a href="#monsagri" class="navbar">Monsagri</a>
 	</nav>
 	<main>
+	<div id="wrapperinstructions">
 		<h3 id="instructions">Instructions</h3>
 
 		<p>Concentration, also known as Match Match, Match Up, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. <br>
 		The object of the game is to turn over pairs of matching cards. Concentration can be played with any number of players or as solitaire. It is a particularly good game for young children, though adults may find it challenging and stimulating as well.</p>
 
+	</div>
+
+	<div id="wrappergame">
 		<h3 id="game">Game</h3>
 
-		<div id="scorebox"> 
+		<div id="scorebox" class = "gamefunctioncontainer"> 
 			<p>Your Score</p>
-			<p id="scoredisplay">0</p>
+			<p id="scoredisplay" class = "gamefunction">0</p>
 		</div>
-		<div id="reset"	class="button">
-			<button id="resetbutton">Reset</button>
+		<div id="reset"	class="gamefunctioncontainer">
+			<button id="resetbutton" class = "gamefunction">Start Again</button>
 		</div>
 
 		<div id="game-board" class="board clearfix">
 			
 		</div>
+
+	</div>
+
+	<div id="wrapperhighscores">
 		
 		<h3 id="highscores">Highscores</h3>
 
@@ -67,12 +75,14 @@
 			</tr>
 		</table>
 
+	</div>
+	<div id="wrappermonsagri">
 		<h3 id="monsagri">Monsagri</h3>
 
 		<p>I'm a student at GA London's Web Development Immersive course.<br>
 		I am interested in reviving old games and connecting with interesting minds.<br>
 		For now follow me and get in touch to stay up to date!</p>
-
+	</div>
 	</main>
 		
 	<footer>
