Added more cards available under CC

--- a/home.html
+++ b/home.html
@@ -19,23 +19,30 @@
 			<a href="#monsagri" class="navbar">Monsagri</a>
 	</nav>
 	<main>
-	<div id="wrapperinstructions">
+	<div id="wrapperinstructions" class="wrapper">
 		<h3 id="instructions">Instructions</h3>
 
 		<p>Concentration, also known as Match Match, Match Up, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. <br>
-		The object of the game is to turn over pairs of matching cards. Concentration can be played with any number of players or as solitaire. It is a particularly good game for young children, though adults may find it challenging and stimulating as well.</p>
+		The object of the game is to turn over pairs of matching cards. Concentration can be played with any number of players or as solitaire. It is a particularly good game for young children, though adults may find it challenging and stimulating as well.
+		</p>
+		<h3 id="howtoplay">How to Play</h3>
+
+		<p>In this version of Concentration you are looking for matching cards of opposite suits. You receive <strong>5</strong>points for each pair you find and lose <strong>2</strong> for each failed attempt. <br>
+		Try to beat the highscores and test your memory against your friends'! 
+		</p>
 
 	</div>
 
-	<div id="wrappergame">
-		<h3 id="game">Game</h3>
-
+	<div id="wrappergame"> 
+		<h3 id="game">The Game</h3>
+		<div class="wrapper">
 		<div id="scorebox" class = "gamefunctioncontainer"> 
 			<p>Your Score</p>
-			<p id="scoredisplay" class = "gamefunction">0</p>
+			<p id="scoredisplay" class ="gamefunction">0</p>
 		</div>
 		<div id="reset"	class="gamefunctioncontainer">
 			<button id="resetbutton" class = "gamefunction">Start Again</button>
+		</div>
 		</div>
 
 		<div id="game-board" class="board clearfix">
@@ -44,7 +51,7 @@
 
 	</div>
 
-	<div id="wrapperhighscores">
+	<div id="wrapperhighscores" class="wrapper">
 		
 		<h3 id="highscores">Highscores</h3>
 
@@ -76,7 +83,7 @@
 		</table>
 
 	</div>
-	<div id="wrappermonsagri">
+	<div id="wrappermonsagri" class="wrapper">
 		<h3 id="monsagri">Monsagri</h3>
 
 		<p>I'm a student at GA London's Web Development Immersive course.<br>
