minor clearup and moved cards to separate js file

--- a/home.html
+++ b/home.html
@@ -121,7 +121,8 @@
 			</li>
 		</ul>
 	</footer>
-	<script src="js/main.js"></script>
+	<script type="text/javascript" src="js/cards.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
