--- a/home.html
+++ b/home.html
@@ -20,14 +20,14 @@
 	</nav>
 	<main>
 	<div id="wrapperinstructions" class="wrapper">
-		<h3 id="instructions">Instructions</h3>
+		<h3 id="instructions">The Game's History</h3>
 
 		<p>Concentration, also known as Match Match, Match Up, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. <br>
 		The object of the game is to turn over pairs of matching cards. Concentration can be played with any number of players or as solitaire. It is a particularly good game for young children, though adults may find it challenging and stimulating as well.
 		</p>
 		<h3 id="howtoplay">How to Play</h3>
 
-		<p>In this version of Concentration you are looking for matching cards of opposite suits. You receive <strong>5</strong>points for each pair you find and lose <strong>2</strong> for each failed attempt. <br>
+		<p>In this version of Concentration you are looking for matching cards of opposite suits. You receive <strong>5</strong> points for each pair you find and lose <strong>2</strong> for each failed attempt. <br>
 		Try to beat the highscores and test your memory against your friends'! 
 		</p>
 
@@ -46,7 +46,6 @@
 		</div>
 
 		<div id="game-board" class="board clearfix">
-			<p id="boardachor"></p>
 		</div>
 
 	</div>
