(added all files this time) Fixed button layout - added shuffle to reset button - removed dead footer links

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 		<h3 id="game">The Game</h3>
 		<div class="wrapper">
 		<div id="scorebox" class = "gamefunctioncontainer"> 
-			<p>Your Score</p>
-			<p id="scoredisplay" class ="gamefunction">0</p>
+			<p class = "gamefunction">Your Score <br> 
+			<span id="scoredisplay">0</span></p>
 		</div>
 		<div id="reset"	class="gamefunctioncontainer">
-			<button id="resetbutton" class = "gamefunction">Start Again</button>
+			<p class = "gamefunction" id="fakebutton">Start Again</p>
 		</div>
 		</div>
 
@@ -99,18 +99,8 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
-					<img src="images/thumbnail-codepen.png" alt="Codepen Logo Black and White" title="Codepen" class="socialmedia">
-				</a>
-			</li>
-			<li>
 				<a href="mailto:monsagri@gmail.com">
 					<img src="images/thumbnail-gmail.jpg" alt="Gmail Logo Black and White" title="Gmail" class="socialmedia">
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="images/thumbnail-slack.jpg" alt="Slack Logo Black and White" title="Slack" class="socialmedia">
 				</a>
 			</li>
 			<li>
