--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	</div>
 
 	<div id="wrappergame"> 
-		<h3 id="game">The Game</h3>
-		<div class="wrapper">
+		<h3 id = "game">The Game</h3>
+		<div id = "wrappergamefunctions" class="wrapper">
 		<div id="scorebox" class = "gamefunctioncontainer"> 
 			<p class = "gamefunction">Your Score <br> 
 			<span id="scoredisplay">0</span></p>
