--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 		</p>
 		<h3 id="howtoplay">How to Play</h3>
 
-		<p>In this version of Concentration you are looking for matching cards of opposite suits. You receive <strong>5</strong> points for each pair you find and lose <strong>2</strong> for each failed attempt. <br>
+		<p>In this version of Concentration you are looking for matching cards of opposite suits. For example the King of Spades matches the King of Clubs.<br>
+		 You receive <strong>5</strong> points for each pair you find and lose <strong>2</strong> for each failed attempt. <br>
 		Try to beat the highscores and test your memory against your friends'! 
 		</p>
 
