Added choice of difficulty settings

--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
 			<p class = "gamefunction">Your Score <br> 
 			<span id="scoredisplay">0</span></p>
 		</div>
+		<div id="easy"	class="gamefunctioncontainer">
+			<p class = "gamefunction fakebutton">Easy Mode</p>
+		</div>
+		<div id="default"	class="gamefunctioncontainer">
+			<p class = "gamefunction fakebutton">Default Mode</p>
+		</div>
 		<div id="reset"	class="gamefunctioncontainer">
-			<p class = "gamefunction" id="fakebutton">Start Again</p>
+			<p class = "gamefunction fakebutton">Start Again</p>
 		</div>
 		</div>
 
