Coding on a longhaul flight leads to chaos

--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
 	<div id="wrappergame"> 
 		<h3 id = "game">The Game</h3>
 		<div id = "wrappergamefunctions" class="wrapper">
-		<div id="scorebox" class = "gamefunctioncontainer"> 
-			<p class = "gamefunction">Your Score <br> 
-			<span id="scoredisplay">0</span></p>
-		</div>
 		<div id="easy"	class="gamefunctioncontainer">
 			<p class = "gamefunction fakebutton">Easy Mode</p>
 		</div>
 		<div id="default"	class="gamefunctioncontainer">
 			<p class = "gamefunction fakebutton">Default Mode</p>
 		</div>
+		<div id="scorebox" class = "gamefunctioncontainer"> 
+			<p class = "gamefunction">Your Score <br> 
+			<span id="scoredisplay">0</span></p>
+		</div>
 		<div id="reset"	class="gamefunctioncontainer">
 			<p class = "gamefunction fakebutton">Start Again</p>
+		</div>
+		<div id="resethighscores"	class="gamefunctioncontainer">
+			<p class = "gamefunction fakebutton">Reset Scores</p>
 		</div>
 		</div>
 
@@ -85,6 +88,33 @@
 			<tr>
 				<td id="player4">CCC</td>
 				<td id="score4">10</td>
+			</tr>
+		</table>
+
+		<table id="highscoretableeasy" class="scores hidden">
+			<tr>
+				<th>Name</th>
+				<th>Score</th>
+			</tr>
+			<tr>
+				<td id="player0easy">Mons</td>
+				<td id="score0easy">20</td>
+			</tr>
+			<tr>
+				<td id="player1easy">Agri</td>
+				<td id="score1easy">15</td>
+			</tr>
+			<tr>
+				<td id="player2easy">AAA</td>
+				<td id="score2easy">12</td>
+			</tr>
+			<tr>
+				<td id="player3easy">BBB</td>
+				<td id="score3easy">8</td>
+			</tr>
+			<tr>
+				<td id="player4easy">CCC</td>
+				<td id="score4easy">4</td>
 			</tr>
 		</table>
 
