Added easymode highscoreboard and option to hide/reveal it. Added Board reset

--- a/index.html
+++ b/index.html
@@ -87,6 +87,32 @@
 				<td id="score4">10</td>
 			</tr>
 		</table>
+		<table id="highscoretableeasy" class="scores hidden">
+			<tr>
+				<th>Name</th>
+				<th>Score</th>
+			</tr>
+			<tr>
+				<td id="player0easy">Mons</td>
+				<td id="score0easy">18</td>
+			</tr>
+			<tr>
+				<td id="player1easy">Agri</td>
+				<td id="score1easy">15</td>
+			</tr>
+			<tr>
+				<td id="player2easy">AAA</td>
+				<td id="score2easy">12</td>
+			</tr>
+			<tr>
+				<td id="player3easy">BBB</td>
+				<td id="score3easy">10</td>
+			</tr>
+			<tr>
+				<td id="player4easy">CCC</td>
+				<td id="score4easy">6</td>
+			</tr>
+		</table>
 
 	</div>
 	<div id="wrappermonsagri" class="wrapper">
