Added Easy Mode Highscore functionality - Added Reset Scores Button with no Functionality - Added localstorage for Easymode Scores

--- a/index.html
+++ b/index.html
@@ -37,15 +37,18 @@
 	<div id="wrappergame"> 
 		<h3 id = "game">The Game</h3>
 		<div id = "wrappergamefunctions" class="wrapper">
-		<div id="scorebox" class = "gamefunctioncontainer"> 
-			<p class = "gamefunction">Your Score <br> 
-			<span id="scoredisplay">0</span></p>
-		</div>
 		<div id="easy"	class="gamefunctioncontainer">
 			<p class = "gamefunction fakebutton">Easy Mode</p>
 		</div>
 		<div id="default"	class="gamefunctioncontainer">
 			<p class = "gamefunction fakebutton">Default Mode</p>
+		</div>
+		<div id="scorebox" class = "gamefunctioncontainer"> 
+			<p class = "gamefunction">Your Score <br> 
+			<span id="scoredisplay">0</span></p>
+		</div>
+		<div id="resetscores"	class="gamefunctioncontainer">
+			<p class = "gamefunction fakebutton">Reset Scores</p>
 		</div>
 		<div id="reset"	class="gamefunctioncontainer">
 			<p class = "gamefunction fakebutton">Start Again</p>
