Finalized Easy Highscore functinoality -Added Reset Highscores Functionality

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 			<p class = "gamefunction">Your Score <br> 
 			<span id="scoredisplay">0</span></p>
 		</div>
-		<div id="resetscores"	class="gamefunctioncontainer">
-			<p class = "gamefunction fakebutton">Reset Scores</p>
-		</div>
 		<div id="reset"	class="gamefunctioncontainer">
 			<p class = "gamefunction fakebutton">Start Again</p>
+		</div>
+		<div id="resetscores"	class="gamefunctioncontainer">
+			<p class = "gamefunction fakebutton">Reset Scores</p>
 		</div>
 		</div>
 
@@ -90,7 +90,7 @@
 				<td id="score4">10</td>
 			</tr>
 		</table>
-		<table id="highscoretableeasy" class="scores hidden">
+		<table id="highscoretableeasy" class="scores ">
 			<tr>
 				<th>Name</th>
 				<th>Score</th>
