Ensured that Highscores slide down instead of being replaced in their current position

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<td id="score4">10</td>
 			</tr>
 		</table>
-		<table id="highscoretableeasy" class="scores ">
+		<table id="highscoretableeasy" class="scores hidden">
 			<tr>
 				<th>Name</th>
 				<th>Score</th>
