Added Home link to navigate to main Site

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<h1>Memory Game</h1>
 	</header>
 	<nav class="clearfix">
+      <a href="monsagri.github.io" class="navbar">Home</a>
 			<a href="#instructions" class="navbar">Instructions</a>
 			<a href="#game" class="navbar">Game</a>
 			<a href="#highscores" class="navbar">Highscores</a>
@@ -29,12 +30,12 @@
 
 		<p>In this version of Concentration you are looking for matching cards of opposite suits. For example the King of Spades matches the King of Clubs.<br>
 		 You receive <strong>5</strong> points for each pair you find and lose <strong>2</strong> for each failed attempt. <br>
-		Try to beat the highscores and test your memory against your friends'! 
+		Try to beat the highscores and test your memory against your friends'!
 		</p>
 
 	</div>
 
-	<div id="wrappergame"> 
+	<div id="wrappergame">
 		<h3 id = "game">The Game</h3>
 		<div id = "wrappergamefunctions" class="wrapper">
 		<div id="easy"	class="gamefunctioncontainer">
@@ -43,8 +44,8 @@
 		<div id="default"	class="gamefunctioncontainer">
 			<p class = "gamefunction fakebutton">Default Mode</p>
 		</div>
-		<div id="scorebox" class = "gamefunctioncontainer"> 
-			<p class = "gamefunction">Your Score <br> 
+		<div id="scorebox" class = "gamefunctioncontainer">
+			<p class = "gamefunction">Your Score <br>
 			<span id="scoredisplay">0</span></p>
 		</div>
 		<div id="reset"	class="gamefunctioncontainer">
@@ -61,7 +62,7 @@
 	</div>
 
 	<div id="wrapperhighscores" class="wrapper">
-		
+
 		<h3 id="highscores">Highscores</h3>
 
 		<table id="highscoretable" class="scores">
@@ -126,7 +127,7 @@
 		For now follow me and get in touch to stay up to date!</p>
 	</div>
 	</main>
-		
+
 	<footer>
 		<ul>
 			<li>
