Fixed link to main page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1>Memory Game</h1>
 	</header>
 	<nav class="clearfix">
-      <a href="monsagri.github.io" class="navbar">Home</a>
+      <a href="https://monsagri.github.io" class="navbar">Home</a>
 			<a href="#instructions" class="navbar">Instructions</a>
 			<a href="#game" class="navbar">Game</a>
 			<a href="#highscores" class="navbar">Highscores</a>
